Adding id attribute instead of class attribute on the section for each character

--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
         <img src="https://static.tvtropes.org/pmwiki/pub/images/clanuchiha.png" alt="Uchiha Clan (family) logo/symbol">
         <nav>
             <ul>
-                <li><a href="#">Itachi</a></li>
-                <li><a href="#">Sasuke</a></li>
-                <li><a href="#">Madara</a></li>
-                <li><a href="#">Obito</a></li>
+                <li><a href="#itachi-section">Itachi</a></li>
+                <li><a href="#sasuke-section">Sasuke</a></li>
+                <li><a href="#madara-section">Madara</a></li>
+                <li><a href="#obito-section">Obito</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section class="itachi-section">
+        <section id="itachi-section">
             <div class="cont-itachi"></div>
         </section>
-        <section class="sasuke-section">
+        <section id="sasuke-section">
             <div class="cont-sasuke"></div>
         </section>
-        <section class="madara-section">
+        <section id="madara-section">
             <div class="cont-madara"></div>
         </section>
-        <section class="obito-section">
+        <section id="obito-section">
             <div class="cont-obito"></div>
         </section>
     </main>
