Adding the story of Itachi Uchiha

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     </header>
     <main>
         <section id="itachi-section">
-            <div class="cont-itachi"></div>
+            <div class="cont-itachi">
+                <h2>Itachi Uchiha</h2>
+                <p>Itachi was a prodigy of the Uchiha clan,<br> known for his calm intelligence and unmatched<br> skill from a young age. Though seen as a traitor<br> for massacring his entire clan, his true motive<br> was to protect his younger brother, Sasuke, and<br> prevent a civil war that could destroy the Hidden<br> Leaf Village. Burdened with guilt and loneliness,<br> Itachi carried his secret until his death, when the truth of<br> his sacrifice was finally revealed. He is remembered as a<br> tragic hero — a man who gave everything for peace.</p>
+            </div>
         </section>
         <section id="sasuke-section">
             <div class="cont-sasuke"></div>
@@ -32,6 +35,6 @@
             <div class="cont-obito"></div>
         </section>
     </main>
-    <footer>Itachi Uchiha &copy;</footer>
+    <footer>Uchiha Clan &copy;</footer>
 </body>
 </html>
