Adding how to create a hamburger manu without the need of javascript

--- a/navigation/hamburger.html
+++ b/navigation/hamburger.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="hamburger.css">
+    <script src="https://kit.fontawesome.com/962e89a5c4.js" crossorigin="anonymous"></script>
     <title>Hamburger Menu</title>
 </head>
 <body>
-    
+    <header>
+        <input type="checkbox" id="menu-check">
+        <label for="menu-check" class="h-menu"><i class="fas fa-bars"></i></label>
+        <nav>
+            <a href="hamburger.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Welcome to the website</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
+        in veniam blanditiis iste repudiandae? Quidem eaque impedit aut cum
+        consectetur aperiam ullam quam id eveniet.</p>
+    </main>
 </body>
 </html>
