--- a/navigation/hamburger.html
+++ b/navigation/hamburger.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <h1>Logo</h1>
         <input type="checkbox" id="menu-check">
         <label for="menu-check" class="h-menu"><i class="fas fa-bars"></i></label>
         <nav>
