--- a/buggy-page.html
+++ b/buggy-page.html
@@ -33,7 +33,7 @@
         <a href="#" class="button">View Project</a>
       </div>
 
-      <img src="https://via.placeholder.com/300x200" width="300" height="200"/>
+      <img src="https://via.placeholder.com/300x200" alt="An image of an placeholder" width="300" height="200"/>
 
       <div class="project-card">
         <h3 class="project-title">Project Three</h3>
