--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </nav>
     </header>
     <main>
+        <h1>The Uchiha Clan</h1>
         <section id="itachi-section">
             <div class="cont-itachi">
                 <h2>Itachi Uchiha</h2>
