--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
             </div>
         </section>
         <section id="sasuke-section">
-            <div class="cont-sasuke"></div>
+            <div class="cont-sasuke">
+                <h1>Sasuke Uchiha</h1>
+                <p>Sasuke grew up haunted by the loss of his family<br> and driven by hatred toward his brother, Itachi.<br> His quest for vengeance consumed him, leading<br> him down a dark path that isolated him from friends<br> and allies. But after learning the truth about Itachi’s<br> sacrifice, Sasuke’s anger turned toward the system<br> that caused his brother’s suffering. Torn between<br> revenge and redemption, Sasuke sought his own<br> way to bring peace to the world, making him one<br> of the most complex characters in the series.</p>
+            </div>
         </section>
         <section id="madara-section">
             <div class="cont-madara"></div>
