--- a/codedex/restaurant.html
+++ b/codedex/restaurant.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="restaurant.css">
-    <title>Restaurant | Menu</title>
+    <title>Kebabi | Menu</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Welcome to KEBABI</h1>
+        <nav>
+            <ul>
+                <li><a href="">Menu</a></li>
+                <li><a href="">Order-form</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section></section>
+        <section></section>
+    </main>
+    <footer>
+        <p>Kebabi &copy;</p>
+        <p>Made with love by the Kebabi family</p>
+    </footer>
 </body>
 </html>
