--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <header>
-        <img src="https://static.tvtropes.org/pmwiki/pub/images/clanuchiha.png" alt="Uchiha Clan (family) logo/symbol">
+        <a href="index.html"><img src="https://static.tvtropes.org/pmwiki/pub/images/clanuchiha.png" alt="Uchiha Clan (family) logo/symbol"></a>
         <nav>
             <ul>
-                <li><a href="#itachi-section">Itachi</a></li>
-                <li><a href="#sasuke-section">Sasuke</a></li>
-                <li><a href="#madara-section">Madara</a></li>
-                <li><a href="#obito-section">Obito</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#sasuke-section">Facts</a></li>
+                <li><a href="#madara-section">Highlights</a></li>
+                <li><a href="#">Susanoo</a></li>
             </ul>
         </nav>
     </header>
@@ -34,7 +34,7 @@
                 <div>
                     <img src="https://cdna.artstation.com/p/assets/images/images/059/503/672/large/anasxart-untitled34-20220723170519.jpg?1676527382" alt="Picture of the second main character of the Naruto serie" width="200">
                 </div>
-                <h2 class="sasuke">Sasuke Uchiha</h2>
+                <h2>Sasuke Uchiha</h2>
                 <p>Sasuke grew up haunted by the loss of his family<br> and driven by hatred toward his brother, Itachi.<br> His quest for vengeance consumed him, leading<br> him down a dark path that isolated him from friends<br> and allies. But after learning the truth about Itachi’s<br> sacrifice, Sasuke’s anger turned toward the system<br> that caused his brother’s suffering. Torn between<br> revenge and redemption, Sasuke sought his own<br> way to bring peace to the world, making him one<br> of the most complex characters in the series.</p>
             </div>
         </section>
@@ -42,12 +42,6 @@
             <div class="cont-madara">
                 <h2 class="madara">Madara Uchiha</h2>
                 <p>Madara was one of the founders of the Hidden Leaf<br> Village and once dreamed of a world without war.<br> But his ideals twisted over time, leading him to<br> believe that true peace could only come through<br> illusion and control. Betrayed by his own clan and<br> rival, Hashirama Senju, Madara chose to manipulate<br> destiny itself through the Infinite Tsukuyomi — a<br> plan to trap humanity in an eternal dream. His power<br> and conviction made him a near-godlike figure, both<br> feared and respected as one of history’s most legendary<br> shinobi.</p>
-            </div>
-        </section>
-        <section id="obito-section">
-            <div class="cont-obito">
-                <h2 class="obito">Obito Uchiha</h2>
-                <p>Obito started as a cheerful, kind-hearted ninja who<br> dreamed of becoming Hokage. But after a tragic<br> accident and the loss of the girl he loved, he fell<br> into despair and was manipulated by Madara.<br> Taking on the mask of “Tobi,” he sought to create<br> a world without pain through the Infinite Tsukuyomi.<br> Yet deep inside, Obito’s old self still longed for<br> redemption. In the end, he sacrificed himself to protect<br> Naruto and his friends, proving that even those lost<br> in darkness can find their way back to the light.</p>
             </div>
         </section>
     </main>
