--- a/multimedia/video.html
+++ b/multimedia/video.html
@@ -4,8 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video</title>
+    <style>
+        body {
+            background: #222;
+            color: #fff;
+        }
+
+        .container {
+            max-width: 1000px;
+            margin: 50px auto;
+        }
+
+        .container video {
+            border: 2px solid #fff;
+            border-radius: 10px;
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="normal">
+            <video controls width="400" height="250">
+                <source src="video/video-1.mp4">
+            </video>
+        </div>
+        <br><br>
+        <hr>
+        <div class="withPoster">
+            <video controls width="400" height="250">
+                <source src="video/video-2.mp4">
+            </video>
+        </div>
+        <br><br>
+        <hr>
+        <div class="responsive">
+            <video controls width="400" height="250">
+                <source src="video/video-3.mp4">
+            </video>
+        </div>
+    </div>
 </body>
 </html>
