--- a/multimedia/video.html
+++ b/multimedia/video.html
@@ -23,23 +23,23 @@
 </head>
 <body>
     <div class="container">
-        <div class="normal">
+        <div role="first-video" class="normal">
             <video controls width="400" height="250">
-                <source src="video/video-1.mp4">
+                <source src="video/video-1.mp4" type="video/mp4">
             </video>
         </div>
         <br><br>
         <hr>
-        <div class="withPoster">
+        <div role="second-video" class="withPoster">
             <video controls width="400" height="250">
-                <source src="video/video-2.mp4">
+                <source src="video/video-2.mp4" type="video/mp4">
             </video>
         </div>
         <br><br>
         <hr>
-        <div class="responsive">
+        <div role="third-video" class="responsive">
             <video controls width="400" height="250">
-                <source src="video/video-3.mp4">
+                <source src="video/video-3.mp4" type="video/mp4">
             </video>
         </div>
     </div>
