--- a/contact-form/contact.html
+++ b/contact-form/contact.html
@@ -20,10 +20,14 @@
         <div class="form-wrapper">
             <form action="#">
                 <label for="name">Name:</label>
-                <input type="text" name="name" id="name" aria-label="email">
+                <input type="text" name="name" id="name" aria-label="email" required>
                 <br><br>
                 <label for="email">Email:</label>
-                <input type="email" name="email" id="email" aria-label="email">
+                <input type="email" name="email" id="email" aria-label="email" required>
+                <br><br>
+                <label for="password">Phone:</label>
+                <input type="text" name="phone" id="phone" aria-label="phone-number" required>
+                <br><br>
             </form>
         </div>
     </main>
