--- a/4-elements.html
+++ b/4-elements.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="5-elements.css">
+    <link rel="stylesheet" href="4-elements.css">
     <title>Elementors</title>
 </head>
 <body>
     <header>
-      <img src="https://i.pinimg.com/564x/31/d1/f6/31d1f65a3611694f42b4501232acf42e.jpg" alt="picture of the 5 great elements, fire, water, earth, wind and lightning" class="logo">
+      <img src="https://substackcdn.com/image/fetch/$s_!Yc2L!,f_auto,q_auto:good,fl_progressive:steep/https%3A%2F%2Fsubstack-post-media.s3.amazonaws.com%2Fpublic%2Fimages%2Fa4b39583-220f-4097-8e21-d9b027bfa9d6_1920x1080.jpeg" alt="picture of the 5 great elements, fire, water, earth and wind" class="logo">
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">5-Elements</a></li>
+          <li><a href="#">4-Elements</a></li>
           <li><a href="#">Stories</a></li>
         </ul>
       </nav>
@@ -26,7 +26,7 @@
           provident commodi a facilis exercitationem aperiam.</p>
         </div>
         <hr>
-        <div class="5-elements">
+        <div class="4-elements">
           <div class="fire">
             <img src="" alt="picture of fire element" class="fire-element" id="element">
           </div>
@@ -38,9 +38,6 @@
           </div>
           <div class="wind">
             <img src="" alt="picture of wind element" class="wind-element" id="element-4">
-          </div>
-          <div class="lightning">
-            <img src="" alt="picture of lightning element" class="lightning-element" id="element-5">
           </div>
         </div>
       </section>
