--- a/4-elements.html
+++ b/4-elements.html
@@ -63,6 +63,9 @@
             </div>
           </div>
         </div>
+        <div class="avatar">
+          <video controls src="video/avatar.mp4"></video>
+        </div>
       </section>
     </main>
     <footer>
